--- a/app/src/main/res/layout/activity_grafik_jual_harian.xml
+++ b/app/src/main/res/layout/activity_grafik_jual_harian.xml
@@ -36,22 +36,84 @@
             android:layout_centerInParent="true"
             android:text="@string/grafik_penjualan_harian"/>
     </RelativeLayout>
-    <LinearLayout
-        android:id="@+id/rl_content"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-
-
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/chart"
+        <LinearLayout
+            android:padding="@dimen/dimen_10"
+            android:id="@+id/rl_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </com.github.mikephil.charting.charts.LineChart>
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:orientation="vertical">
 
 
-    </LinearLayout>
+
+            <LinearLayout
+                android:gravity="right"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_line_chart"
+                    android:src="@drawable/ic_line_chart"
+                    android:layout_width="@dimen/dimen_50"
+                    android:layout_height="@dimen/dimen_50">
+                </ImageView>
+
+                <ImageView
+                    android:id="@+id/iv_bar_chart"
+                    android:src="@drawable/ic_bar_chart"
+                    android:layout_width="@dimen/dimen_50"
+                    android:layout_height="@dimen/dimen_50">
+                </ImageView>
+
+                <ImageView
+                    android:id="@+id/iv_pie_chart"
+                    android:src="@drawable/ic_pie_chart"
+                    android:layout_width="@dimen/dimen_50"
+                    android:layout_height="@dimen/dimen_50">
+                </ImageView>
+
+
+
+            </LinearLayout>
+
+            <View
+                android:background="@color/grey"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_1"/>
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:visibility="visible"
+                android:id="@+id/line_chart"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_300">
+            </com.github.mikephil.charting.charts.LineChart>
+
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:visibility="gone"
+                android:id="@+id/bar_chart"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_300">
+            </com.github.mikephil.charting.charts.BarChart>
+
+
+            <com.github.mikephil.charting.charts.PieChart
+                android:visibility="gone"
+                android:id="@+id/pie_chart"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_300">
+            </com.github.mikephil.charting.charts.PieChart>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
 </LinearLayout>
