--- a/app/src/main/res/layout/activity_pilih_barang.xml
+++ b/app/src/main/res/layout/activity_pilih_barang.xml
@@ -50,12 +50,12 @@
             android:layout_height="wrap_content">
         </SearchView>
 
-        <android.support.v7.widget.RecyclerView
+        <ListView
             android:id="@+id/lv"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </android.support.v7.widget.RecyclerView>
+        </ListView>
 
     </LinearLayout>
 
