--- a/app/src/main/res/layout/activity_rokartu_stok.xml
+++ b/app/src/main/res/layout/activity_rokartu_stok.xml
@@ -103,7 +103,59 @@
         </TableRow>
     </TableLayout>
 
+    <LinearLayout
+        android:padding="@dimen/dimen_10"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimen_100">
 
+        <LinearLayout
+            android:layout_weight="3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/iv_icon"
+                android:layout_width="@dimen/dimen_70"
+                android:layout_height="@dimen/dimen_70">
+            </ImageView>
+
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorBlack"
+                android:text="@string/remark_report"
+                android:textSize="@dimen/text_12"
+                />
+            <TextView
+                android:id="@+id/tv_price_purchase"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/remark_report"
+                android:textSize="@dimen/text_12"
+                />
+            <TextView
+                android:id="@+id/tv_price_sell"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/remark_report"
+                android:textSize="@dimen/text_12"
+                />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 
     <ListView
