--- a/app/src/main/res/layout/fragment_sinkron.xml
+++ b/app/src/main/res/layout/fragment_sinkron.xml
@@ -46,6 +46,19 @@
 
        </Button>
 
+       <View
+           android:layout_width="match_parent"
+           android:layout_height="@dimen/dimen_20"/>
+
+       <Button
+           style="@style/dialog_red_button"
+           android:id="@+id/btnMatikanAlarm"
+           android:text="@string/matikan_alarm"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+
+       </Button>
+
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/pb"
