--- a/app/src/main/res/layout/fragment_jual.xml
+++ b/app/src/main/res/layout/fragment_jual.xml
@@ -150,6 +150,8 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
+            shimmer:fabSize="normal"
+            android:src="@drawable/ic_barkode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
