--- a/app/src/main/res/layout/fragment_jual.xml
+++ b/app/src/main/res/layout/fragment_jual.xml
@@ -149,13 +149,14 @@
         </RelativeLayout>
 
         <android.support.design.widget.FloatingActionButton
+            android:layout_marginBottom="@dimen/dimen_60"
+            android:layout_marginRight="@dimen/dimen_20"
             android:id="@+id/fab"
             shimmer:fabSize="normal"
             android:src="@drawable/ic_barkode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin" />
+            android:layout_gravity="bottom|end"/>
 
 
     </android.support.design.widget.CoordinatorLayout>
