--- a/app/src/main/res/layout/im_kategori.xml
+++ b/app/src/main/res/layout/im_kategori.xml
@@ -1,30 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:padding="@dimen/dimen_10"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
-    <EditText
-        android:padding="@dimen/dimen_5"
-        android:background="@drawable/button_rounded_white"
-        android:layout_marginTop="@dimen/dimen_40"
-        android:hint="@string/nama_kategori"
-        android:id="@+id/et_nama_kategori"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_40">
+        android:layout_height="wrap_content">
 
-    </EditText>
+        <TextView
+            android:layout_weight="9"
+            android:text="1."
+            android:id="@+id/tv_nomor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <EditText
-        android:padding="@dimen/dimen_5"
-        android:background="@drawable/button_rounded_white"
-        android:hint="@string/kode_kategori"
-        android:id="@+id/et_kode_kategori"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_40">
+        </TextView>
 
-    </EditText>
+        <LinearLayout
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:padding="@dimen/dimen_5"
+                android:background="@drawable/button_rounded_white"
+                android:layout_marginTop="@dimen/dimen_10"
+                android:hint="@string/nama_kategori"
+                android:id="@+id/et_nama_kategori"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_40">
+
+            </EditText>
+
+
+            <EditText
+                android:padding="@dimen/dimen_5"
+                android:background="@drawable/button_rounded_white"
+                android:hint="@string/kode_kategori"
+                android:id="@+id/et_kode_kategori"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_40">
+
+            </EditText>
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
