--- a/app/src/main/res/layout/activity_coba.xml
+++ b/app/src/main/res/layout/activity_coba.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,5 +14,14 @@
         android:layout_height="wrap_content"
         android:text="Button"
         tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="341dp" />
-</android.support.constraint.ConstraintLayout>
+        tools:layout_editor_absoluteY="37dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="12dp"
+        tools:layout_editor_absoluteY="110dp" />
+
+</LinearLayout>
