fix list kecamatan+kota saat register, filter kota,kecamatan,propinsi

--- a/app/src/main/res/layout/activity_kota.xml
+++ b/app/src/main/res/layout/activity_kota.xml
@@ -43,6 +43,13 @@
         android:background="@color/colorBg"
         android:orientation="vertical">
 
+        <SearchView
+            android:id="@+id/sv"
+            android:queryHint="@string/cari_nama_kota"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </SearchView>
+
         <ListView
             android:id="@+id/lv"
             android:layout_width="match_parent"
