--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,19 @@
         />
 
 
+    <Switch
+        android:textColor="@color/colorAccent"
+        android:textSize="12sp"
+        android:id="@+id/swTampilkanPassword"
+        android:text="@string/tampilkan_password"
+        android:layout_marginStart="@dimen/dimen_10"
+        android:layout_marginEnd="@dimen/dimen_10"
+        android:layout_gravity="right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    </Switch>
+
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
